--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/kaushan-script": "^5.1.1",
     "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.0",
     "tailwindcss": "^4.0.8"
