--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^5.1.1",
     "@tailwindcss/vite": "^4.0.8",
     "astro": "^5.3.0",
-    "tailwindcss": "^4.0.8"
+    "tailwindcss": "^4.0.8",
+    "twilio": "^5.4.5"
   }
 }
