--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/nunito": "^5.1.1",
     "@fontsource/kaushan-script": "^5.1.1",
     "@fontsource/poppins": "^5.1.1",
+    "@netlify/functions": "^3.0.1",
     "@tailwindcss/vite": "^4.0.8",
     "@vonage/server-sdk": "^3.20.0",
     "astro": "^5.4.1",
