--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "astro": "^5.5.4",
     "dotenv": "^16.4.7",
     "tailwindcss": "^4.0.8",
-    "twilio": "^5.4.5"
+    "twilio": "^5.5.1"
+  },
+  "devDependencies": {
+    "netlify-cli": "^19.1.4"
   }
 }
