--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "@vonage/server-sdk": "^3.20.0",
     "astro": "^5.5.4",
+    "astro-icon": "^1.1.5",
     "dotenv": "^16.4.7",
     "tailwindcss": "^4.0.8",
     "twilio": "^5.5.1"
