--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "dotenv": "^16.4.7",
     "tailwindcss": "^4.0.8",
     "twilio": "^5.5.1"
+  },
+  "devDependencies": {
+    "rollup": "^3.29.5"
   }
 }
