--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@netlify/functions": "^3.0.1",
     "@tailwindcss/vite": "^4.0.8",
     "@vonage/server-sdk": "^3.20.0",
-    "astro": "^5.5.5",
+    "astro": "^5.6.1",
+    "astro-seo": "^0.8.4",
     "dotenv": "^16.4.7",
     "lucide-astro": "^0.484.0",
-    "tailwindcss": "^4.0.8",
     "twilio": "^5.5.1"
   },
   "devDependencies": {
-    "rollup": "^3.29.5"
+    "rollup": "^3.29.5",
+    "tailwindcss": "^4.1.3"
   }
 }
